@@ -112,7 +112,7 @@ need to install the package <i>libjpeg-devel</i>.
     </td></tr>
 <tr><td class="reqfirst">KDE libraries <em>(kdelibs)</em></td>
     <td class="req">Graphical user interface</td>
-    <td>KDE &gt;= 3.1 with Qt &gt;= 3.2</td>
+    <td>KDE &gt;= 3.2 with Qt &gt;= 3.2</td>
     <td>kdelibs4-dev &amp; libqt3-mt-dev (DEB)<br>
     kdelibs-devel / libkdecore4-devel &amp;<br>
     qt-devel / libqt3-devel (RPM)<br>
